2003-10-20  Mike Kestner  <mkestner@ximian.com>

	* atk/atk-api.xml : regenerated
	* gdk/gdk-api.xml : regenerated
	* gtk/gtk-api.xml : regenerated
	* gtkhtml/gtkhtml-api.xml : regenerated [Fixes #49875]
	* parser/gapi2xml.pl : handle unnamed parameter declarations.

2003-10-20  Mike Kestner  <mkestner@ximian.com>

	* generator/Parameters.cs : add a cast to the call_string for Length
	params other than int.

2003-10-18  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : add move-node rules for Paint methods.
	* gtk/gtk-api.xml : regenerated
	* parser/gapi2xml.pl : put paint_ methods in global, not Paint.
	* parser/gapi-fixup.cs : add move-node rule handling. [Fixes #47980]

2003-10-17  Mike Kestner  <mkestner@ximian.com>

	* generator/Parameters.cs : mark enum pointer params as out.
	need to audit if any are really arrays.  [Fixes #49779]

2003-10-17  Mike Kestner  <mkestner@ximian.com>

	* gtk/Window.cs : override Raw prop and take a ref, since gtk+
	owns the ref to new Windows, and we need a ref.  [Fixes #47721]

2003-10-17  Mike Kestner  <mkestner@ximian.com>

	* gnome/CanvasPoints.custom : make New overload a ctor overload.
	* gnome/Gnome.metadata : mark CanvasPoints as opaque
	* gnome/gnome-api.xml : regenerated. [Fixes #37256]

2003-10-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gtk/ThreadNotify.cs: close the pipe and detach the GSource when
	explicitly requested or finalized.

2003-10-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gconf/tools/schemagen.cs: support for lists.

2003-10-15  Mike Kestner  <mkestner@ximian.com>

	* generator/Property.cs : use new Opaque value ctor and 
	rework get/set blocks for Opaque types. [Fixes #47959]
	* glib/Opaque.cs : kill explicit IntPtr operator.
	* glib/Value.cs : rework Opaque value ctor.
	

2003-10-14  Mike Kestner  <mkestner@ximian.com>

	* gtk/Gtk.metadata : rule for ClipboardGetFunc
	* gtk/Clipboard.custom : comment out for now don't think any
	of this is needed.