@@ -43,6 +43,7 @@
   <attr path="//object[@cname='GtkToggleButton']/constructor[@cname='gtk_toggle_button_new_with_mnemonic']" name="preferred">1</attr>
   <attr path="//object[@cname='GtkTreeModelSort']/method[@name='ConvertChildIterToIter']/*/*[@name='sort_iter']" name="pass_as">out</attr>
   <attr path="//object[@cname='GtkTreeModelSort']/method[@name='ConvertIterToChildIter']/*/*[@name='child_iter']" name="pass_as">out</attr>
+  <attr path="//object[@cname='GtkTreeSelection']/method[@name='GetSelected']/*/*" name="pass_as">out</attr>
   <attr path="//object[@cname='GtkTreeStore']/constructor[@cname='gtk_tree_store_newv']/parameters" name="va_type">length_param</attr>
   <attr path="//object[@cname='GtkTreeStore']/method[@name='Append']/*/*[@name='iter']" name="pass_as">out</attr>
   <attr path="//object[@cname='GtkTreeStore']/method[@name='Insert']/*/*[@name='iter']" name="pass_as">out</attr>
