@@ -1,22 +1,3 @@
 // Gtk.TreeSelection.Custom - Gtk TreeSelection calss customizations
-//
-// Author: Kristian Rietveld <kris@gtk.org>
-//
-// (c) 2002 Kristian Rietveld
-//
-// This code is inserted after the automatically generated code.
-
-
-                /// <summary> GetSelected Method </summary>
-                /// <remarks> To be completed </remarks>
-
-                [DllImport("libgtk-win32-2.0-0.dll")]
-                static extern bool gtk_tree_selection_get_selected(IntPtr raw, out IntPtr model, ref Gtk.TreeIter iter);
-
-                public bool GetSelected(out Gtk.TreeModel model, ref Gtk.TreeIter iter) {
-                        IntPtr handle = (IntPtr) 0;
-                        bool raw_ret = gtk_tree_selection_get_selected(Handle, out handle, ref iter);
-                        bool ret = raw_ret;
-                        model = (Gtk.TreeModel)GLib.Object.GetObject (handle, false);
-                        return ret;
-                }
+// this file was emptied when the generator became capable of generating its contents,
+// but was not removed in the event future customizations are needed.
