@@ -8253,11 +8253,11 @@
       <method name="GetMode" cname="gtk_tree_selection_get_mode">
         <return-type type="GtkSelectionMode" />
       </method>
-      <method name="GetSelected" cname="gtk_tree_selection_get_selected" hidden="1">
+      <method name="GetSelected" cname="gtk_tree_selection_get_selected">
         <return-type type="gboolean" />
         <parameters>
-          <parameter type="GtkTreeModel**" name="model" />
-          <parameter type="GtkTreeIter*" name="iter" />
+          <parameter type="GtkTreeModel**" name="model" pass_as="out" />
+          <parameter type="GtkTreeIter*" name="iter" pass_as="out" />
         </parameters>
       </method>
       <method name="GetSelectedRows" cname="gtk_tree_selection_get_selected_rows">
