@@ -1257,9 +1257,6 @@
   <class name="GtkTreePath">
     <method>GetIndices</method>
   </class>
-  <class name="GtkTreeSelection">
-    <method>GetSelected</method>
-   </class>
   <class name="GtkTreeView">
     <method>GetPathAtPos</method>
     <method>GetSearchEqualFunc</method>
