@@ -1,5 +1,14 @@
 2003-10-20  Mike Kestner  <mkestner@ximian.com>
 
+	* generator/Parameters.cs : treat interface out params like objects.
+	* gtk/gtk-api.xml : regenerated
+	* gtk/Gtk.metadata : mark TreeSelection.GetSelected params out.
+	* gtk/TreeSelection.custom : emptied since it's now generated.
+	* sources/Gtk.metadata : kill hide of TreeSelection.GetSelected.
+	[fixes #49858]
+
+2003-10-20  Mike Kestner  <mkestner@ximian.com>
+
 	* atk/atk-api.xml : regenerated
 	* gdk/gdk-api.xml : regenerated
 	* gtk/gtk-api.xml : regenerated
